-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 Beta1
-
None
-
3fd9d08bc24bc5f769677b411750d73801adc2d2 (qt/qtwebengine/dev) 297d086de02ff1babe792b96e02cb760f7a26a0e (qt/qtwebengine/6.2)
In Qt5, there was the method QWebEnginePage::view().
This does not exist in Qt6
It was not deprecated in Qt 5.15, see
https://doc.qt.io/qt-5.15/qwebenginepage.html#view
It is not mentioned at all in the Qt 6.2 documentation, see
https://doc-snapshots.qt.io/qt6-dev/qwebenginepage.html
And there is no QtWebEngine porting guide available in
https://doc.qt.io/qt-6/modulechanges.html
- resulted from
-
QTBUG-90920 Build GoldenCheetah as QtBluetooth test application with Qt 6
-
- Closed
-
For Gerrit Dashboard: QTBUG-95331 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
361654,3 | Add QWebEnginePage::view() replacement | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
363782,2 | Add QWebEnginePage::view() replacement | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |