Add QWebEnginePage::view() replacement

Make it a static getter in QWebEngineView

Pick-to: 6.2
Fixes: QTBUG-95331
Change-Id: I552f0047343abd909c5cd521a7a7a01d62896b00
Reviewed-by: Michal Klocek <michal.klocek@qt.io>